# familliar

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  NETWORK_TEST.md  README.md  TODO.md  VERSIONING.md  _SYNOLOGY.md  familiar-dev-plan.md  familliar-dev-plan.md  job-logs.txt
.github/workflows/: ci.yml  release.yml
backend/: .cache  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241231_000000_baseline.py
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: deps.py  exceptions.py  ratelimit.py
backend/app/api/routes/: __init__.py  artwork.py  background.py  bandcamp.py  chat.py  diagnostics.py  export_import.py  external_tracks.py  favorites.py  health.py  lastfm.py  library.py  new_releases.py  organizer.py  outputs.py  playlists.py  plugins.py  profiles.py  proposed_changes.py  sessions.py  settings.py  smart_playlists.py  spotify.py  tracks.py  videos.py
backend/app/db/: init_db.py  migrate_add_profiles.py  migrate_add_track_status.py  migrate_fix_playlists.py  models.py  session.py
backend/app/services/: analysis.py  app_settings.py  artwork.py  artwork_fetcher.py  audio_identification.py  background.py  bandcamp.py  bulk_editor.py  community_cache.py  ego_map.py  embedding_map.py  export_import.py  external_features.py  external_track_matcher.py  import_service.py  lastfm.py  llm.py  lyrics.py  metadata.py  metadata_enrichment.py  metadata_lookup.py  metadata_writer.py  musicbrainz.py  new_releases.py  normalize.py  organizer.py  outputs.py  plugins.py  proposed_changes.py  quality.py  recommendations.py  scanner.py  search_links.py  sessions.py  smart_playlists.py  spotify.py  tasks.py  video.py
backend/app/services/llm/: __init__.py  executor.py  providers.py  service.py  tools.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/versions/: 20241231_000000_baseline.py  20241231_000001_add_track_error_columns.py  20250101_add_performance_indexes.py  20250102_add_artist_info.py  20250109_add_metadata_editing_fields.py  20251231_145519_add_file_hash_index.py  20260109_151437_add_indexes_and_sync_nullable_columns.py  20260114_add_proposed_changes.py  20260115_add_analysis_source_tracking.py  20260115_add_new_releases_priority.py  20260115_add_plugins_table.py  20260115_remove_approved_status.py  20260117_add_acoustid_lookup_cache.py  20260117_add_embedding_failure_tracking.py  20260121_add_bitrate_mode.py  20260125_add_external_tracks.py
backend/scripts/: fix_album_art.py
backend/tests/: conftest.py  test_analysis.py  test_api_chat.py  test_api_library.py  test_api_playlists.py  test_api_profiles.py  test_api_settings.py  test_api_smart_playlists.py  test_api_tracks.py  test_background.py  test_exceptions.py  test_health.py  test_llm_executor.py  test_metadata_writer.py  test_migrations.py  test_scanner.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  init-pgvector.sql
docs/: LIBRARY_BROWSERS.md  REST-API.md  VISUALIZER_API.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: ai-chat.spec.ts  audio-playback.spec.ts  global-setup.ts  helpers.ts  integrations.spec.ts  mobile-screenshots.spec.ts  playlists.spec.ts  profiles.spec.ts  screenshots.spec.ts  settings-admin.spec.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AlbumArtwork.tsx  BackgroundJobsIndicator.tsx  DownloadIndicator.tsx  ErrorBoundary.tsx  HealthIndicator.tsx  ProposedChangesIndicator.tsx  WorkerAlert.tsx
frontend/src/db/: index.ts
frontend/src/hooks/: useAppNavigation.ts  useArtworkPrefetch.ts  useAudioAnalyser.ts  useAudioEngine.ts  useDownloadedTracks.ts  useFavorites.ts  useIntersectionObserver.ts  useKeyboardShortcuts.ts  useListeningSession.ts  useMetadataEnrichment.ts  useOfflineAlbum.ts  useOfflineQuery.ts  useOfflineStatus.ts  useOfflineTrack.ts  usePreviewAudio.ts  (+2 more)
release-checklists/: v0.1.0-checklist.md  v0.1.1-checklist.md
scripts/: deploy-dev.sh
(+165 files in other folders)
