[project]
name = "familiar"
version = "0.1.0"
description = "LLM-powered local music player"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    # Task queue
    "celery[redis]>=5.3.0",
    # Audio metadata
    "mutagen>=1.47.0",
    # Image processing
    "pillow>=10.0.0",
    # HTTP client
    "httpx>=0.26.0",
    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Async support
    "greenlet>=3.0.0",
    # Utilities
    "python-multipart>=0.0.6",
    "anthropic>=0.75.0",
    "spotipy>=2.25.2",
    "bandcamp-api>=0.2.3",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",  # For TestClient
]

# Phase 1.5: Audio analysis
analysis = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",  # For CLAP model
    "soundfile>=0.12.0",     # Audio file loading
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
