[project]
name = "familiar"
version = "0.1.0"
description = "LLM-powered local music player"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    # Task queue
    "celery[redis]>=5.3.0",
    # Audio metadata
    "mutagen>=1.47.0",
    # Image processing
    "pillow>=10.0.0",
    # HTTP client
    "httpx>=0.26.0",
    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Async support
    "greenlet>=3.0.0",
    # Utilities
    "python-multipart>=0.0.6",
    "anthropic>=0.75.0",
    "spotipy>=2.25.2",
    "bandcamp-api>=0.2.3",
    "beautifulsoup4>=4.14.3",
    "rapidfuzz>=3.0.0",
    "pyacoustid>=1.3.0",
    "musicbrainzngs>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",  # For TestClient
]

# Phase 1.5: Audio analysis
# Note: torch is installed separately in Docker with CPU-only version
analysis = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "transformers>=4.30.0",  # For CLAP model
    "soundfile>=0.12.0",     # Audio file loading
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
# Use non-strict mode until full type coverage is complete
strict = false
ignore_missing_imports = true
# Basic type checking
check_untyped_defs = false
warn_unused_ignores = false
no_implicit_optional = true
# Skip untyped function definitions
disallow_untyped_defs = false
disallow_untyped_calls = false
# Disable strict optional for WebSocket handlers with complex control flow
strict_optional = false

# Exclude files with complex third-party library interactions and legacy code
[[tool.mypy.overrides]]
module = [
    "app.services.metadata",
    "app.services.artwork",
    "app.services.organizer",
    "app.services.analysis",
    "app.workers.tasks",
    "app.db.migrate_add_profiles",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
# Use CPU-only PyTorch to reduce Docker image size (no CUDA)
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
